<resources>
    <string name="app_name">QuidditchCounter</string>
    <string name="match_title">Quidditch</string>
    <string name="slytherin">Logo Slytherin House</string>
    <string name="gryffindor">Logo Gryffindor House</string>
    <string name="score">0</string>
    <string name="quaffle">quaffle</string>
    <string name="snitch">snitch</string>
    <string name="reset">reset</string>
</resources>
