<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quidditchcounter.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/parchment1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textSize="70sp"
                android:layout_gravity="center_horizontal"

                android:textStyle="bold"
                android:text= "@string/match_title" />
                <!-- scoreboard -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:orientation="horizontal">
                    <!-- Gryffindor scoreboard -->
                    <LinearLayout
                        style="@style/team_scoreBoard">
                        <ImageView
                            style="@style/team_image"
                            android:src="@drawable/gryffindor"
                            android:contentDescription="@string/gryffindor"/>
                        <TextView
                            android:id="@+id/gryff_score"
                            style="@style/score"
                            android:text="@string/score"/>
                        <Button
                            style="@style/button"
                            android:text="@string/quaffle"
                            android:background="@color/background_gryffindor"
                            android:textColor="@color/text_gryffindor"
                            android:onClick="griffAddTen"/>
                        <Button
                            style="@style/button"
                            android:text="@string/snitch"
                            android:background="@color/background_gryffindor"
                            android:textColor="@color/text_gryffindor"
                            android:onClick="griffAddOneHundrednFifty"/>
                    </LinearLayout> <!-- end of Gryffindor scoreboard -->

                    <!-- Slytherin scoreboard -->
                    <LinearLayout
                        style="@style/team_scoreBoard">
                        <ImageView
                            style="@style/team_image"
                            android:src="@drawable/slytherin"
                            android:contentDescription="@string/slytherin"
                             />
                        <TextView
                            android:id="@+id/slyth_score"
                            style="@style/score"
                            android:text="@string/score"/>
                        <Button
                            style="@style/button"
                            android:text="@string/quaffle"
                            android:background="@color/background_slytherin"
                            android:textColor="@color/text_slytherin"
                            android:onClick="slythAddTen"/>
                        <Button
                            style="@style/button"
                            android:background="@color/background_slytherin"
                            android:textColor="@color/text_slytherin"
                            android:text="@string/snitch"
                            android:onClick="slythAddOneHundrednFifty"/>
                    </LinearLayout> <!--end of Slytherin scoreboard -->
                </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#413e3f"
                android:textColor="#e5eee9"
                android:text="@string/reset"
                android:onClick="resetScores"/>
        </LinearLayout> <!-- end of scoreboard -->
    </ScrollView>
</RelativeLayout>
